<resources>
    <string name="app_name">My Library</string>
    <string name="activity_all_books">All Books</string>
    <string name="activity_book">Book Details</string>
    <string name="activity_already_read_book">Already Read Books</string>
    <string name="activity_currently_reading_books">Currently Reading Books</string>
    <string name="activity_favorite_books">Your Favorite Books</string>
    <string name="activity_want_to_read">Your Wishlist</string>
    <string name="activity_add_new_book">Add new book</string>
    <string name="activity_statistics">Your statistics</string>
    <string name="activity_change_book_info">Change your book</string>
    <string name="pages">Pages:</string>
    <string name="page_number">Page Number</string>
    <string name="author_name">Author Name</string>
    <string name="author">Author:</string>
    <string name="add_to_favorites">Add To Favorites</string>
    <string name="want_to_read">Want To Read</string>
    <string name="already_read">Already Read</string>
    <string name="book_name">Book Name:</string>
    <string name="description">Description:</string>
    <string name="long_description">Long Description Is Here</string>
    <string name="my_library">My Library</string>
    <string name="see_all_books">See All Books</string>
    <string name="currently_reading">Currently Reading</string>
    <string name="already_read_books">Already Read books</string>
    <string name="your_wishlist">Your Wishlist</string>
    <string name="see_your_favorites">See Your Favorites</string>
    <string name="developer_name">Developed By Vlad Yermakov</string>
    <string name="aboutBtn">About</string>
    <string name="short_description">Short Description</string>
    <string name="delete">Delete</string>
    <string name="your_review">Your Review:</string>
    <string name="my_review">My Review</string>
    <string name="input_info">Input information to add a new book.</string>
    <string name="book_name_hint">Book name</string>
    <string name="author_name_hint">Author name</string>
    <string name="page_number_hint">Page number</string>
    <string name="short_description_hint">Short Description</string>
    <string name="long_description_hint">Long Description</string>
    <string name="your_review_hint">Your review</string>
    <string name="book_image_url_hint">Book image URL (with .jpg or .png ending)</string>
    <string name="submit_btn">Submit</string>
    <string name="warn_book_name">Enter book name</string>
    <string name="warn_author_name">Enter author name</string>
    <string name="warn_page_num">Enter number of pages</string>
    <string name="warn_short_desc">Enter short description</string>
    <string name="warn_long_desc">Enter long description</string>
    <string name="warn_enter_review">Enter Review</string>
    <string name="warn_book_image_url">Enter book image URL</string>
    <string name="add_new_book_button">add_new_book_button</string>
    <string name="user_statistics">Your Statistics</string>
    <string name="pages_user_read">Pages you have read:</string>
    <string name="total_page_num">Total number of pages</string>
    <string name="books_user_read">Books number you have read</string>
    <string name="books_number_show">Books number</string>
    <string name="change_book_info">Change information</string>
    <string name="book_image">BookImage</string>
    <string name="change_info">Change information about his book.</string>
</resources>