<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddNewBookActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="UselessParent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/edtTxtBookName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="25dp"
                android:layout_marginTop="24dp"
                android:ems="10"
                android:hint="@string/book_name_hint"
                android:inputType="textPersonName"
                app:layout_constraintStart_toStartOf="@+id/guideline2"
                app:layout_constraintTop_toBottomOf="@+id/txtAddNewBook" />

            <EditText
                android:id="@+id/edtTxtAuthorName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="25dp"
                android:layout_marginTop="16dp"
                android:ems="10"
                android:hint="@string/author_name_hint"
                android:inputType="textPersonName"
                app:layout_constraintStart_toStartOf="@+id/guideline2"
                app:layout_constraintTop_toBottomOf="@+id/edtTxtBookName" />

            <EditText
                android:id="@+id/edtTxtPageNum"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="25dp"
                android:layout_marginTop="16dp"
                android:ems="10"
                android:hint="@string/page_number_hint"
                android:inputType="textPersonName"
                app:layout_constraintStart_toStartOf="@+id/guideline2"
                app:layout_constraintTop_toBottomOf="@+id/edtTxtAuthorName" />

            <EditText
                android:id="@+id/edtTxtShortDesc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="25dp"
                android:layout_marginTop="16dp"
                android:ems="10"
                android:hint="@string/short_description_hint"
                android:inputType="textPersonName"
                app:layout_constraintStart_toStartOf="@+id/guideline2"
                app:layout_constraintTop_toBottomOf="@+id/edtTxtPageNum" />

            <EditText
                android:id="@+id/edtTxtLongDesc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="25dp"
                android:layout_marginTop="16dp"
                android:ems="10"
                android:hint="@string/long_description_hint"
                android:inputType="textPersonName"
                app:layout_constraintStart_toStartOf="@+id/guideline2"
                app:layout_constraintTop_toBottomOf="@+id/edtTxtShortDesc" />

            <EditText
                android:id="@+id/edtTxtReview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="25dp"
                android:layout_marginTop="16dp"
                android:ems="10"
                android:hint="@string/your_review_hint"
                android:inputType="textPersonName"
                app:layout_constraintStart_toStartOf="@+id/guideline2"
                app:layout_constraintTop_toBottomOf="@+id/edtTxtLongDesc" />

            <EditText
                android:id="@+id/edtTxtUrl"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="25dp"
                android:layout_marginTop="16dp"
                android:autofillHints="@string/book_image_url_hint"
                android:ems="10"
                android:hint="@string/book_image_url_hint"
                app:layout_constraintStart_toStartOf="@+id/guideline2"
                app:layout_constraintTop_toBottomOf="@+id/edtTxtReview" />

            <Button
                android:id="@+id/btnSubmitBookInfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="@string/submit_btn"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edtTxtUrl" />

            <TextView
                android:id="@+id/txtWarnBookName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/warn_book_name"
                android:textColor="@color/design_default_color_error"
                android:visibility="gone"
                app:layout_constraintStart_toStartOf="@+id/guideline2"
                app:layout_constraintBottom_toTopOf="@+id/edtTxtBookName" />

            <TextView
                android:id="@+id/txtWarnAuthorName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/warn_author_name"
                android:textColor="@color/design_default_color_error"
                android:visibility="gone"
                app:layout_constraintStart_toStartOf="@+id/guideline2"
                app:layout_constraintBottom_toTopOf="@+id/edtTxtAuthorName" />

            <TextView
                android:id="@+id/txtWarnPageNum"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/warn_page_num"
                android:textColor="@color/design_default_color_error"
                android:visibility="gone"
                app:layout_constraintStart_toStartOf="@+id/guideline2"
                app:layout_constraintBottom_toTopOf="@+id/edtTxtPageNum" />

            <TextView
                android:id="@+id/txtWarnShortDesc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/warn_short_desc"
                android:textColor="@color/design_default_color_error"
                android:visibility="gone"
                app:layout_constraintStart_toStartOf="@+id/guideline2"
                app:layout_constraintBottom_toTopOf="@+id/edtTxtShortDesc" />

            <TextView
                android:id="@+id/txtWarnLongDesc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/warn_long_desc"
                android:textColor="@color/design_default_color_error"
                android:visibility="gone"
                app:layout_constraintStart_toStartOf="@+id/guideline2"
                app:layout_constraintBottom_toTopOf="@+id/edtTxtLongDesc" />

            <TextView
                android:id="@+id/txtWarnReview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/warn_enter_review"
                android:textColor="@color/design_default_color_error"
                android:visibility="gone"
                app:layout_constraintStart_toStartOf="@+id/guideline2"
                app:layout_constraintBottom_toTopOf="@+id/edtTxtReview" />

            <TextView
                android:id="@+id/txtWarnUrl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/warn_book_image_url"
                android:textColor="@color/design_default_color_error"
                android:visibility="gone"
                app:layout_constraintStart_toStartOf="@+id/guideline2"
                app:layout_constraintBottom_toTopOf="@+id/edtTxtUrl" />

            <TextView
                android:id="@+id/txtAddNewBook"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="@string/input_info"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="40dp" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</RelativeLayout>