<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BookActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="UselessParent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/txtPages"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/pages"
                app:layout_constraintStart_toStartOf="@+id/guideline5"
                app:layout_constraintTop_toBottomOf="@+id/txtAuthor" />

            <TextView
                android:id="@+id/txtPageNumShow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:text="@string/page_number"
                app:layout_constraintBottom_toBottomOf="@+id/txtPages"
                app:layout_constraintStart_toStartOf="@+id/guideline7"
                app:layout_constraintTop_toTopOf="@+id/txtPages" />

            <TextView
                android:id="@+id/txtAuthorNameShow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:text="@string/author_name"
                app:layout_constraintBottom_toBottomOf="@+id/txtAuthor"
                app:layout_constraintStart_toStartOf="@+id/guideline7"
                app:layout_constraintTop_toTopOf="@+id/txtAuthor" />

            <TextView
                android:id="@+id/txtAuthor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/author"
                app:layout_constraintStart_toStartOf="@+id/guideline5"
                app:layout_constraintTop_toBottomOf="@+id/txtBookNameShow" />

            <Button
                android:id="@+id/btnAddToFavorite"
                android:layout_width="170dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="35dp"
                android:text="@string/add_to_favorites"
                android:textAllCaps="false"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/guideline3"
                app:layout_constraintTop_toBottomOf="@+id/btnAlreadyRead" />

            <ImageView
                android:id="@+id/bookImage"
                android:layout_width="180dp"
                android:layout_height="180dp"
                android:layout_marginTop="50dp"
                android:contentDescription="@string/book_image"
                app:layout_constraintEnd_toStartOf="@+id/guideline3"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:srcCompat="@tools:sample/avatars" />

            <Button
                android:id="@+id/btnAddToCurrentlyReading"
                android:layout_width="170dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:layout_marginEnd="35dp"
                android:text="@string/currently_reading"
                android:textAllCaps="false"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/guideline3"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/btnAddToWantToRead"
                android:layout_width="170dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="35dp"
                android:text="@string/want_to_read"
                android:textAllCaps="false"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/guideline3"
                app:layout_constraintTop_toBottomOf="@+id/btnAddToCurrentlyReading" />

            <Button
                android:id="@+id/btnAlreadyRead"
                android:layout_width="170dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="35dp"
                android:text="@string/already_read"
                android:textAllCaps="false"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/guideline3"
                app:layout_constraintTop_toBottomOf="@+id/btnAddToWantToRead" />

            <Button
                android:id="@+id/btnChangeBookInfo"
                android:layout_width="170dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="35dp"
                android:text="@string/change_book_info"
                android:textAllCaps="false"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/guideline3"
                app:layout_constraintTop_toBottomOf="@+id/btnAddToFavorite" />

            <TextView
                android:id="@+id/txtBookName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:text="@string/book_name"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/txtBookNameShow"
                app:layout_constraintStart_toStartOf="@+id/guideline7"
                app:layout_constraintTop_toTopOf="@+id/txtBookNameShow" />

            <TextView
                android:id="@+id/txtBookNameShow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/book_name"
                app:layout_constraintStart_toStartOf="@+id/guideline5"
                app:layout_constraintTop_toTopOf="@+id/guideline4" />

            <TextView
                android:id="@+id/txtShortDesc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="20dp"
                android:text="@string/description"
                app:layout_constraintStart_toStartOf="@+id/guideline5"
                app:layout_constraintTop_toBottomOf="@+id/txtPages"
                app:layout_goneMarginEnd="20dp" />

            <TextView
                android:id="@+id/txtLongDesc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:text="@string/long_description"
                app:layout_constraintStart_toStartOf="@+id/guideline5"
                app:layout_constraintTop_toBottomOf="@+id/txtShortDesc" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="205dp" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_begin="379dp" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="20dp" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="20dp" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="127dp" />

            <TextView
                android:id="@+id/txtUserReview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:text="@string/your_review"
                app:layout_constraintStart_toStartOf="@+id/guideline5"
                app:layout_constraintTop_toBottomOf="@+id/txtLongDesc" />

            <TextView
                android:id="@+id/txtMyReview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="32dp"
                android:text="@string/my_review"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="@+id/guideline5"
                app:layout_constraintTop_toBottomOf="@+id/txtUserReview" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</RelativeLayout>